--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Magnificent Student-->
+		<!-- Jaqueline Chan-->
 		<title>Coffee Express</title>
-		<meta charset="utf-8"></meta>
+		<meta charset="utf-8">
 	</head>
 
 	<body>
 
 		<header>
-			<H1>Coffee Express</h1>
+			<h1>Coffee Express</h1>
 
 			<nav>
 				<ul>
@@ -24,14 +24,14 @@
 
 		<main>
 
-			<H2>Experience the Difference</h2>
+			<h2>Experience the Difference</h2>
 				
-			<p>Sparky's Coffee House provides the experience of consuming a high-quality specialty coffee. More than a beverage, our delicious coffee begins with 100% brutte arabica coffee beans that are grown in India at an altitude of 1500m above sea level which helps to produce a more desired coffee flavor. Come experience the difference at Sparky's Coffee House.
+			<p>Sparky's Coffee House provides the experience of consuming a high-quality specialty coffee. More than a beverage, our delicious coffee begins with 100% brutte arabica coffee beans that are grown in India at an altitude of 1500m above sea level which helps to produce a more desired coffee flavor. Come experience the difference at Sparky's Coffee House.</p>
 
 			<ul>
 				<li>Small batch roasting to ensure unparalleled quality and freshness</li>
 				<li>Flavored coffees for sale</li>
-				<li>Live acoustic music on Thursday and Saturday nights
+				<li>Live acoustic music on Thursday and Saturday nights</li>
 				<li>Showcase your artwork to sell in our cafe</li>
 			</ul>
 			
@@ -43,6 +43,8 @@
 				Hours: Mon - Sun<br />
 				6am - 9pm<br />
 			</address>
+
+		</main>
 
 
 		<footer>
